fix(profile) Prevent long words to overflow cards

--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -316,3 +316,7 @@
         overflow: scroll;
     }
 }
+
+#obsContent > div > div > p {
+    overflow-wrap: break-word;
+}
